--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Bingo!</title>
     <script src="random generation.js"></script>
     <link rel="stylesheet" href="style.css">
-  
+    <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
 
   <body>
