--- a/index.html
+++ b/index.html
@@ -9,13 +9,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
 
+
   <body>
 
-    <div class="center big">
+    <div class="center big nomargin">
       <p id="question">Bingo</p>
     </div>
 
-    <div class="center medium">
+
+    <div class="center medium nomargin">
       <p id="details">This game will generate numbers between 0 and 20</p>
     </div>
 
@@ -23,7 +25,7 @@
       <p id="suggestion">Press space or the button below to continue.</p>
     </div>
 
-    <div class="container1 left">
+    <div class="container left">
               <ul id="game1">
                   <!-- first row -->
                   <li id=1_1></li>
@@ -41,7 +43,7 @@
               </ul>
       </div>
 
-            <div class="container2 right">
+            <div class="container right">
                       <ul id="game4">
                           <!-- first row -->
                           <li id=2_1></li>
@@ -60,7 +62,7 @@
               </div>
 
       <div class="clearfix"></div>
-      <div class="container2  left">
+      <div class="container  left">
               <ul id="game3">
                   <!-- first row -->
                   <li id=1_11></li>
@@ -79,7 +81,7 @@
         </div>
 
 
-      <div class="container1  right">
+      <div class="container  right">
                 <ul id="game2">
                     <!-- first row -->
                     <li id=2_11></li>
