--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
     <meta charset="utf-8">
     <title>Bingo!</title>
     <script src="random generation.js"></script>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style2.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+    <!-- Latest compiled and minified CSS -->
   </head>
 
 
@@ -21,11 +24,16 @@
       <p id="details">This game will generate numbers between 0 and 20</p>
     </div>
 
-    <div class="center small">
+    <div class="center small2">
       <p id="suggestion">Press space or the button below to continue.</p>
     </div>
 
-    <div class="container left">
+
+
+    <div class="container" >
+
+        <div class="row">
+          <div class="col-sm">
               <ul id="game1">
                   <!-- first row -->
                   <li id=1_1></li>
@@ -41,64 +49,64 @@
                   <li id=1_9></li>
                   <li id=1_10></li>
               </ul>
-      </div>
-
-            <div class="container right">
+            </div>
+            <div class="col-sm">
                       <ul id="game4">
                           <!-- first row -->
-                          <li id=2_1></li>
-                          <li id=2_2></li>
-                          <li id=2_3></li>
-                          <li id=2_4></li>
-                          <li id=2_5></li>
+                          <li id=1_11></li>
+                          <li id=1_12></li>
+                          <li id=1_13></li>
+                          <li id=1_14></li>
+                          <li id=1_15></li>
 
                           <!-- second row -->
-                          <li id=2_6></li>
-                          <li id=2_7></li>
-                          <li id=2_8></li>
-                          <li id=2_9></li>
-                          <li id=2_10></li>
+                          <li id=1_16></li>
+                          <li id=1_17></li>
+                          <li id=1_18></li>
+                          <li id=1_19></li>
+                          <li id=1_20></li>
                       </ul>
               </div>
+            </div>
 
-      <div class="clearfix"></div>
-      <div class="container  left">
-              <ul id="game3">
-                  <!-- first row -->
-                  <li id=1_11></li>
-                  <li id=1_12></li>
-                  <li id=1_13></li>
-                  <li id=1_14></li>
-                  <li id=1_15></li>
-
-                  <!-- second row -->
-                  <li id=1_16></li>
-                  <li id=1_17></li>
-                  <li id=1_18></li>
-                  <li id=1_19></li>
-                  <li id=1_20></li>
-              </ul>
-        </div>
-
-
-      <div class="container  right">
-                <ul id="game2">
+            <div class="row" >
+            <div class="col-sm">
+                <ul id="game3">
                     <!-- first row -->
-                    <li id=2_11></li>
-                    <li id=2_12></li>
-                    <li id=2_13></li>
-                    <li id=2_14></li>
-                    <li id=2_15></li>
+                    <li id=2_1></li>
+                    <li id=2_2></li>
+                    <li id=2_3></li>
+                    <li id=2_4></li>
+                    <li id=2_5></li>
 
                     <!-- second row -->
-                    <li id=2_16></li>
-                    <li id=2_17></li>
-                    <li id=2_18></li>
-                    <li id=2_19></li>
-                    <li id=2_20></li>
+                    <li id=2_6></li>
+                    <li id=2_7></li>
+                    <li id=2_8></li>
+                    <li id=2_9></li>
+                    <li id=2_10></li>
                 </ul>
-        </div>
-        <div></div>
+          </div>
+
+  <div class="col-sm">
+
+                  <ul id="game2">
+                      <!-- first row -->
+                      <li id=2_11></li>
+                      <li id=2_12></li>
+                      <li id=2_13></li>
+                      <li id=2_14></li>
+                      <li id=2_15></li>
+
+                      <!-- second row -->
+                      <li id=2_16></li>
+                      <li id=2_17></li>
+                      <li id=2_18></li>
+                      <li id=2_19></li>
+                      <li id=2_20></li>
+                  </ul>
+          </div>
+</div>
         <div class="clearfix"></div>
         <div class="center">
           <button id="button1" type="button" class="button center" onclick="update()">Continue</button>
