--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="utf-8">
     <title>Bingo!</title>
     <script src="random generation.js"></script>
-    <link rel="stylesheet" href="style.css">
-   
+    <link rel="stylesheet" href="style2.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <!-- Latest compiled and minified CSS -->
@@ -30,7 +30,7 @@
 
 
 
-    <div class="container" >
+    <div class="container" id="cont1" >
 
         <div class="row">
           <div class="col-sm">
@@ -69,6 +69,11 @@
               </div>
             </div>
 
+
+            <p style="padding-bottom:100px;">
+                            </p>
+
+
             <div class="row" >
             <div class="col-sm">
                 <ul id="game3">
@@ -87,6 +92,7 @@
                     <li id=2_10></li>
                 </ul>
           </div>
+
 
   <div class="col-sm">
 
