--- a/index.html
+++ b/index.html
@@ -113,6 +113,8 @@
           </div>
 </div>
         <div class="clearfix"></div>
+
+        <p style="padding-bottom:100px;"> </p>
         <div class="center">
           <button id="button1" type="button" class="button center" onclick="update()">Continue</button>
         </div>
