--- a/index.html
+++ b/index.html
@@ -112,7 +112,9 @@
                   </ul>
           </div>
 </div>
-        <div class="clearfix"></div>
+</div>
+
+      
 
 
         <div class="center">
