--- a/index.html
+++ b/index.html
@@ -1,127 +1,127 @@
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
+/* playlist.js */
 
-  <head>
-    <meta charset="utf-8">
-    <title>Bingo!</title>
-    <script src="random generation.js"></script>
-    <link rel="stylesheet" href="style.css">
-    <!-- CSS only -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-    <!-- Latest compiled and minified CSS -->
-  </head>
+window.onload = hide;
 
-
-  <body>
-
-    <div class="center big nomargin">
-      <p id="question">Bingo</p>
-    </div>
-
-
-    <div class="center medium nomargin">
-      <p id="details">This game will generate numbers between 0 and 20</p>
-    </div>
-
-    <div class="center small2">
-      <p id="suggestion">Press space or the button below to continue.</p>
-    </div>
+i=0;
+var numbers = [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17 ,18 , 19, 20];
+var random = shuffle(numbers);
+n=numbers.length;
 
 
 
-    <div class="container" id="cont1" >
+function hide() {
+		var grid1 = document.getElementById("game1");
+		var grid2 = document.getElementById("game2");
+		var grid3 = document.getElementById("game3");
+		var grid4 = document.getElementById("game4");
+		grid1.style.display = "none";
+		grid2.style.display = "none";
+		grid3.style.display = "none";
+		grid4.style.display = "none";
+		cont1.style.display="none"
+}
 
-        <div class="row">
-          <div class="col-sm">
-              <ul id="game1">
-                  <!-- first row -->
-                  <li id=1_1></li>
-                  <li id=1_2></li>
-                  <li id=1_3></li>
-                  <li id=1_4></li>
-                  <li id=1_5></li>
+function unhide() {
+		var grid1 = document.getElementById("game1");
+		var grid2 = document.getElementById("game2");
+		var grid3 = document.getElementById("game3");
+		var grid4 = document.getElementById("game4");
+		grid1.style.display = "block";
+		grid2.style.display = "block";
+		grid3.style.display = "block";
+		grid4.style.display = "block";
+		cont1.style.display="block"
 
-                  <!-- second row -->
-                  <li id=1_6></li>
-                  <li id=1_7></li>
-                  <li id=1_8></li>
-                  <li id=1_9></li>
-                  <li id=1_10></li>
-              </ul>
-            </div>
-            <div class="col-sm">
-                      <ul id="game4">
-                          <!-- first row -->
-                          <li id=1_11></li>
-                          <li id=1_12></li>
-                          <li id=1_13></li>
-                          <li id=1_14></li>
-                          <li id=1_15></li>
-
-                          <!-- second row -->
-                          <li id=1_16></li>
-                          <li id=1_17></li>
-                          <li id=1_18></li>
-                          <li id=1_19></li>
-                          <li id=1_20></li>
-                      </ul>
-              </div>
-            </div>
+}
 
 
-            <p style="padding-bottom:50px;">
-                            </p>
+function init() {
+	var details = document.getElementById("details");
+	details.innerHTML="";
+	var button1 = document.getElementById("button1");
+	button1.innerHTML = "Continue";
+	button1.onclick = update;
+
+	var question = document.getElementById("question");
+  var suggestion = document.getElementById("suggestion");
+	if (i<n) { question.innerHTML=addition(random[i]); suggestion.innerHTML="";}
+	else {
+		suggestion.innerHTML="End of the game, press r or the button below to restart";
+		var button1 = document.getElementById("button1");
+		button1.innerHTML = "Restart";
+		button1.onclick = restart;
+		hide();
+	}
+
+}
+
+function shuffle(o) {
+    for(var j, x, i = o.length; i; j = parseInt(Math.random() * i), x = o[--i], o[i] = o[j], o[j] = x);
+    return o;
+};
 
 
-            <div class="row" >
-            <div class="col-sm">
-                <ul id="game3">
-                    <!-- first row -->
-                    <li id=2_1></li>
-                    <li id=2_2></li>
-                    <li id=2_3></li>
-                    <li id=2_4></li>
-                    <li id=2_5></li>
+function addition(num) {
+	if (num>0) { rand=	Math.floor(Math.random() * (num-1));
+								equation=rand.toString().concat("+") ;
+								rand2=(num-rand).toString();
+								equation=equation.concat(rand2) ;
+							}
+	else { equation="0+0";}
 
-                    <!-- second row -->
-                    <li id=2_6></li>
-                    <li id=2_7></li>
-                    <li id=2_8></li>
-                    <li id=2_9></li>
-                    <li id=2_10></li>
-                </ul>
-          </div>
+	var prefix = '1_';
 
+	for(var s = 1; s<=rand; s++) {
+			var prefix2=prefix.concat(s.toString());
+			el=document.getElementById(prefix2);
+		  el.innerHTML = "x";
+		}
 
-  <div class="col-sm">
+		var prefix = '2_';
 
-                  <ul id="game2">
-                      <!-- first row -->
-                      <li id=2_11></li>
-                      <li id=2_12></li>
-                      <li id=2_13></li>
-                      <li id=2_14></li>
-                      <li id=2_15></li>
+		for(var s = 1; s<=(num-rand); s++) {
+				var prefix2=prefix.concat(s.toString());
+				el=document.getElementById(prefix2);
+			  el.innerHTML = "o";
+			}
 
-                      <!-- second row -->
-                      <li id=2_16></li>
-                      <li id=2_17></li>
-                      <li id=2_18></li>
-                      <li id=2_19></li>
-                      <li id=2_20></li>
-                  </ul>
-          </div>
-</div>
-</div>
-
-      
+	return equation;
+}
 
 
-        <div class="center">
-          <button id="button1" type="button" class="button center" onclick="update()">Continue</button>
-        </div>
+function cleanup(n) {
+	var prefix = n.toString().concat("_");
+	for(var s = 1; s<=20; s++) {
+			var prefix2=prefix.concat(s.toString());
+			el=document.getElementById(prefix2);
+		  el.innerHTML = "";
+		}
+}
 
-  </body>
 
+function update() {
+	i=i+1;
+	cleanup(1);
+	cleanup(2);
+	unhide()
 
-</html>
+	init();
+}
+
+function restart() {
+	i=0;
+	random = shuffle(numbers);
+	unhide()
+	init();
+}
+
+document.addEventListener("keyup", function(e){
+	if (e.which === 32) {
+	update();
+}
+
+if (e.which === 82) {
+	restart();
+}
+
+});
